[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/ui/SwitchCommand.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/textbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/office/bathroom.jpg" type="Texture" id=4]
[ext_resource path="res://src/office/bathroom.gd" type="Script" id=5]
[ext_resource path="res://assets/items/gnome.png" type="Texture" id=6]
[ext_resource path="res://src/ui/inventory_hud.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/Light2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/theme/MyBleedingScars-B0J5.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 9 )

[node name="bathroom" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5
margin_right = 1.5
texture = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory_hud" parent="." instance=ExtResource( 7 )]
margin_bottom = -352.0

[node name="get_finger" parent="." instance=ExtResource( 1 )]
margin_left = 32.5
margin_top = 260.073
margin_right = 232.5
margin_bottom = 280.073

[node name="Label" parent="get_finger" index="1"]
text = "Take Thing in Urinal"

[node name="textbox" parent="." instance=ExtResource( 2 )]

[node name="to_lobby" parent="." instance=ExtResource( 1 )]
margin_left = 224.5
margin_top = 330.073
margin_right = 424.5
margin_bottom = 350.073

[node name="Label" parent="to_lobby" index="1"]
text = "Exit to Lobby"

[node name="gnome" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 76.5001, 63.5731 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
flip_h = true

[node name="Light2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 161.5, 11.5732 )

[node name="to_secret_exit" parent="." instance=ExtResource( 1 )]
margin_left = 14.5
margin_top = 107.073
margin_right = 214.5
margin_bottom = 127.073

[node name="Label" parent="to_secret_exit" index="1"]
text = "Use Back Exit"

[node name="graffiti" type="Label" parent="."]
margin_left = 5.0
margin_top = 203.0
margin_right = 109.0
margin_bottom = 261.0
rect_rotation = -3.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "God so loved us that He sacrificed Himself to create us.
It is only fitting we sacrifice ourselves to create a new god"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" parent="." instance=ExtResource( 3 )]
visible = false

[editable path="get_finger"]
[editable path="to_lobby"]
[editable path="to_secret_exit"]
